--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
-<!DOCTYPE html>
 <html>
-  <head></head>
+    <head>
+        <meta charset="utf-8">
+        <title> Project: Danielle's Website</title>
+    </head>
+    <body>
+        <h1> Health and Fitness</h1>
+        <p>... and I'll help you through it all</p>
+    </body>
 </html>
+
   
